메인 뉴스연결 / 이시욱 / 2-15 10:18 [상세내용] index.html - 뉴스 연결 news.html - 간격 수정

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -460,37 +460,37 @@
             <div class="col-sm-6 p-4 border rounded shadow-sm">
               <div class="d-flex align-items-center justify-content-between mb-sm-4 mb-4 border-bottom">
                 <h2 class="h4 fw-bold"><i class="ci-idea me-3"></i>주요뉴스</h2>
-                <a class="btn px-0" href="news.html">더 보기<i class="ci-arrow-right ms-2"></i></a>
+                <a class="btn px-0" th:href="@{news}">더 보기<i class="ci-arrow-right ms-2"></i></a>
               </div>
               <ul class="list-unstyled mb-0">
                 <li class="mb-0">
-                  <a class="nav-link-style d-flex justify-content-between align-items-center pb-2 mb-2" href="#">
-                    <span class="text-truncate">What are the product refund conditions?</span>
-                    <span class="flex-shrink">2023-01-01</span>
+                  <a class="nav-link-style d-flex justify-content-between align-items-center pb-2 mb-2" href="https://www.yna.co.kr/view/AKR20230213138000004?input=1195m">
+                    <span class="text-truncate">육아고민 상담하세요"…서울시 코디네이터 120명 활동</span>
+                    <span class="flex-shrink">2023-02-14</span>
                   </a>
                 </li>
                 <li class="mb-0">
-                  <a class="nav-link-style d-flex justify-content-between align-items-center pb-2 mb-2" href="#">
-                    <span class="text-truncate">Do you have discounts for returning customers?</span>
-                    <span class="flex-shrink">2023-01-01</span>
+                  <a class="nav-link-style d-flex justify-content-between align-items-center pb-2 mb-2" href="https://www.iusm.co.kr/news/articleView.html?idxno=1008672">
+                    <span class="text-truncate">울산 중구육아종합지원센터, 가정양육 지원사업 홍보</span>
+                    <span class="flex-shrink">2023-02-14</span>
                   </a>
                 </li>
                 <li class="mb-0">
-                  <a class="nav-link-style d-flex justify-content-between align-items-center pb-2 mb-2" href="#">
-                    <span class="text-truncate">How do your referral program work?</span>
-                    <span class="flex-shrink">2023-01-01</span>
+                  <a class="nav-link-style d-flex justify-content-between align-items-center pb-2 mb-2" href="https://www.news1.kr/articles/4950988">
+                    <span class="text-truncate">G마켓, 출산육아템 최대 70% 할인…283개 유아동 브랜드 참여</span>
+                    <span class="flex-shrink">2023-02-13</span>
                   </a>
                 </li>
                 <li class="mb-0">
-                  <a class="nav-link-style d-flex justify-content-between align-items-center pb-2 mb-2" href="#">
-                    <span class="text-truncate">Where I can view and download invoices for my orders?</span>
-                    <span class="flex-shrink">2023-01-01</span>
+                  <a class="nav-link-style d-flex justify-content-between align-items-center pb-2 mb-2" href="http://www.knnews.co.kr/news/articleView.php?idxno=1396892">
+                    <span class="text-truncate">창원시, ‘출발! 신혼부부 책드림’ 2023년 도서 배부</span>
+                    <span class="flex-shrink">2023-02-13</span>
                   </a>
                 </li>
                 <li class="mb-0">
-                  <a class="nav-link-style d-flex justify-content-between align-items-center pb-2 mb-2" href="#">
-                    <span class="text-truncate">Do you provide technical support after the purchase?</span>
-                    <span class="flex-shrink">2023-01-01</span>
+                  <a class="nav-link-style d-flex justify-content-between align-items-center pb-2 mb-2" href="https://www.yna.co.kr/view/AKR20230210097500054?input=1195m">
+                    <span class="text-truncate">광주 일가정양립본부, 육아기 근로시간 단축 연차보상비 지원</span>
+                    <span class="flex-shrink">2023-02-10</span>
                   </a>
                 </li>
               </ul>
@@ -592,7 +592,7 @@
               <div class="card p-3 border shadow">
                 <div class="d-flex align-items-center justify-content-between border-bottom pb-2 mb-3">
                   <h2 class="h4 mb-0 fw-bold"></i>추천도서</h2>
-                  <a class="btn px-0" href="book.html">더 보기<i class="ci-arrow-right ms-2"></i></a>
+                  <a class="btn px-0" th:href="@{/book}">더 보기<i class="ci-arrow-right ms-2"></i></a>
                 </div>
                 <div class="book-slide tns-carousel tns-controls-static tns-nav-enabled tns-nav-inside mb-4 mx-n2">
                   <div class="tns-carousel-inner" data-carousel-options="{&quot;controls&quot;: true}">
