--- a/src/main/resources/templates/news.html
+++ b/src/main/resources/templates/news.html
@@ -97,10 +97,10 @@
 
     <!-- 게시판-->
   
-  <div class="container-sm shadow">
+  <div class="container-sm shadow mb-5">
 <div class="table-responsive">
   
-  <div class=" mt-4 mb-3" >
+  <div class=" mt-3 mb-2" >
    <!--  <div class="mb-1  ma2">
         <div class="text-center">
           <form action="/news" id="newsForm" name="title">
@@ -116,7 +116,7 @@
     
   </div>
   <!-- 검색창 끝-->
-  <table class="table" style="color: #FC6C93;">
+  <table class="table mb-3" style="color: #FC6C93;">
     <thead>
       <tr>
         <th class="col-1 fs-5 text-center">번호</th>
@@ -140,7 +140,7 @@
   </table>
   
 </div>
-</div>
+
 
 
  <!-- 게시판 끝-->
@@ -148,7 +148,7 @@
 
 
 
-    </div>
+    
     
   </main>
 
